# TR-808-Synth

./: .gitignore  BUILD-MOBILE.md  CMakeLists.txt  README.md  build-installer.ps1  manifest.json  package.ps1  sw.js
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: BandlimitedOsc.cpp  BandlimitedOsc.h  Envelope.cpp  Envelope.h  MetalCluster.cpp  MetalCluster.h  NoiseGen.cpp  NoiseGen.h  PitchEnvelope.cpp  PitchEnvelope.h  ResonatorBT.cpp  ResonatorBT.h  ReverbLexicon.cpp  ReverbLexicon.h  SVFilter.cpp  SVFilter.h  Saturator.cpp  Saturator.h  SchmittOsc.cpp  SchmittOsc.h  StereoDelay.h  SwingVCA.h
Source/engine/: DeepParams.h  Mixer.cpp  Mixer.h  PresetManager.cpp  PresetManager.h  Sequencer.cpp  Sequencer.h  VoiceDefs.h  VoiceManager.cpp  VoiceManager.h
Source/params/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/ui/: LookAndFeel808.h  ParamComponents.h  StepSequencerView.cpp  StepSequencerView.h
Source/voices/: BassDrumVoice.cpp  BassDrumVoice.h  ClapVoice.cpp  ClapVoice.h  CowbellVoice.cpp  CowbellVoice.h  MaracasVoice.cpp  MaracasVoice.h  MetalVoice.cpp  MetalVoice.h  SnareVoice.cpp  SnareVoice.h  TomCongaVoice.cpp  TomCongaVoice.h  TunedResonatorVoice.cpp  TunedResonatorVoice.h  Voice.h
calorie-tracker/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
calorie-tracker/public/: manifest.webmanifest  sw.js
calorie-tracker/scripts/: gen-icons.mjs
calorie-tracker/src/app/: globals.css  layout.tsx  page.tsx
calorie-tracker/src/app/api/estimate/: route.ts
calorie-tracker/src/app/api/meals/: route.ts
calorie-tracker/src/app/api/settings/: route.ts
calorie-tracker/src/components/: Chat.tsx  MealList.tsx  Meter.tsx  ServiceWorkerRegister.tsx  SetupForm.tsx
calorie-tracker/src/lib/: calc.ts  date.ts  db.ts  types.ts  user.ts
calorie-tracker/src/types/: css.d.ts
css/: style.css
iPhoneRAWConverter/: .gitignore
iPhoneRAWConverter/iPhoneRAWConverter/: ContentView.swift  ConversionViewModel.swift  DocumentPicker.swift  Info.plist  RAWConverterApp.swift  RAWProcessor.swift
iPhoneRAWConverter/iPhoneRAWConverter.xcodeproj/: project.pbxproj
installer/: TR808Synth.iss
js/: audio-engine.js  ui.js
mobile/: index.html  manifest.json  sw.js
mobile/css/: style.css
mobile/js/: audio-engine.js  sequencer.js  ui.js
tests/: DspTests.cpp  SeqTests.cpp  ToneDump.cpp  VoiceTests.cpp
